src/objects/ADvendio__SelectedContent__c.object
<CustomObject>
    <description>This object displays all content which was selected by the user.</description>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>This field shows the related content.</description>
        <inlineHelpText>This field shows the related content.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Selected Content</relationshipLabel>
        <relationshipName>SelectedContent</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <description>This field shows the related content.</description>
        <inlineHelpText>This field shows the related content.</inlineHelpText>
        <label>Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>Assigned Campaign Items</relationshipLabel>
        <relationshipName>SelectedContents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Selected Content</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__CampaignItem__c</columns>
        <columns>ADvendio__Content__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Selected Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>